--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
                 Bikin </h2> </div>
 
 
-            <div class="classa" > 
-
-            <a href="contact.html"  > Contact </a>
-            <a href="ourteam.html"> Our Team </a>
-            <a href="price&plan.html"> Price & Plan </a>
-            <a href="gallery.html"> Gallery </a> 
-            <a href="feature.html"> Feature </a>
-            <a href="index.html"> Home </a> 
-        </div>   
+            <ul class="classa">
+           <li> <a href="index.html"> Home </a> </li>
+           <li> <a href="feature.html"> Feature </a></li>
+           <li> <a href="gallery.html"> Gallery </a> </li>
+           <li> <a href="contact.html"  > Contact </a></li>
+           <li> <a href="ourteam.html"> Our Team </a></li>
+           <li> <a href="price&plan.html"> Price & Plan </a></li>
+        </ul>
     </nav>
 
 
